--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
 
+body {
+  background-color: black;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 10% 20%;
+}
+
+
+.exp-header {
+  text-align: center;
+  text-transform: uppercase;
+  border-top: 1px solid red;
+  border-bottom: 1px solid red;
+  background-color: #444444;
+}
