--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body {
-  background-color: black;
-  color: white;
+  background-color: ivory;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
   margin: 10% 20%;
 }
@@ -10,7 +10,11 @@ body {
 .exp-header {
   text-align: center;
   text-transform: uppercase;
-  border-top: 1px solid red;
-  border-bottom: 1px solid red;
-  background-color: #444444;
+  border-top: 1px solid blue;
+  border-bottom: 1px solid blue;
+  
+}
+
+img {
+  width: 50%
 }
