--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ body {
   margin: 10% 20%;
 }
 
+h1 {
+  text-decoration-line: underline;
+}
+p {
+  font-style: italic;
+  font-size: 150%;
+}
 
 .exp-header {
   text-align: center;
