--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: ivory;
   color: black;
@@ -8,20 +7,71 @@ body {
 
 h1 {
   text-decoration-line: underline;
+  text-align: center;
+}
+
+h3{
+  font-size: 175%;
 }
 p {
   font-style: italic;
   font-size: 150%;
+  text-align:center;
 }
 
 .exp-header {
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
-  border-top: 1px solid blue;
-  border-bottom: 1px solid blue;
   
 }
 
+.profile{
+  border-top: 1px solid blue;
+  border-bottom: 1px solid blue;
+  text-align: center;
+}
+.info-header{
+  text-align:right;
+}
+
+.title{
+  font-size: 250%;
+}
+
+.fade-in-image {
+  animation: fadeIn 10s;
+  -webkit-animation: fadeIn 10s;
+  -moz-animation: fadeIn 10s;
+  -o-animation: fadeIn 10s;
+  -ms-animation: fadeIn 10s;
+}
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
 img {
-  width: 50%
+  width: 20%;
+  float: left;
+ 
 }
